// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ValidatedInput > エラー時はエラースタイルとエラーメッセージを表示し、touch済みなら入力時にもvalidateする 1`] = `
<div>
  <div
    class="mb-4"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-2"
      for="name"
    >
      タスク名
    </label>
    <input
      class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 border-red-500 "
      id="name"
      name="name"
      type="text"
      value=""
    />
    <div
      class="mt-1 text-sm text-red-600"
    >
      <p>
        タスク名を入力してください
      </p>
    </div>
  </div>
</div>
`;

exports[`ValidatedInput > 初期表示では通常スタイルで、blur後はバリデーションが実行される 1`] = `
<div>
  <div
    class="mb-4"
  >
    <label
      class="block text-sm font-medium text-gray-700 mb-2"
      for="name"
    >
      タスク名
    </label>
    <input
      class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 border-gray-300 "
      id="name"
      name="name"
      type="text"
      value=""
    />
  </div>
</div>
`;
